--- a/TaoOnehacker.DataStructure.Test/TaoOnehacker.DataStructure.Test.csproj
+++ b/TaoOnehacker.DataStructure.Test/TaoOnehacker.DataStructure.Test.csproj
@@ -12,4 +12,8 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TaoOnehacker.DataStructure.Application\TaoOnehacker.DataStructure.Application.csproj" />
+    </ItemGroup>
+
 </Project>
